--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
+    "prop-types": "^15.8.1",
     "vite": "^5.4.9"
   }
 }
