--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.3",
